Fixed invisible input group button

--- a/src/styles/form.less
+++ b/src/styles/form.less
@@ -133,6 +133,11 @@ legend {
 }
 
 
+.input-group-btn {
+	font-size: inherit;
+}
+
+
 .btn {
 	padding: .4em;
 	border-width: .1em;
